<resources>
    <string name="app_name">platzi</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de Ususario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Ingresar</string>
    <string name="dont_have_account">¿No tienes cuenta?,</string>
    <string name="create_here">crea una aquí</string>
    <string name="hint_email">correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_createaccount">Únete</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
    <string name="hint_username_card">David Pedraza</string>
    <string name="firstword_card">Hace</string>
    <string name="textsize_username_card">David Pedraza</string>
    <string name="timecard_card">4 dias</string>
    <string name="likenumbercard_card">10 Me gusta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!-- Strings del intro -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">Siguiente</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>


    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">ver más</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">ver más</string>
    <string name="btn_annotation_mock" translatable="false">   </string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
