<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.pedroas93.platzi.LoginActivity"
    android:background="@color/White"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_siapp"
                android:layout_centerInParent="true"/>

        </RelativeLayout>




        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_horizontal_login"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextBlack"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username"
                        android:allowUndo="false" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextBlack"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:textColor="@android:color/black"
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        />

                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Button
                    android:id="@+id/login"
                    android:layout_width="112dp"
                    android:layout_height="60dp"
                    android:text="@string/text_button_login"
                    android:theme="@style/RaisedButtonDark"
                    android:layout_alignParentRight="true"
                    />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    >

                    <TextView
                        android:id="@+id/tv_response"
                        android:layout_marginTop="35dp"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                    </RelativeLayout>


            </LinearLayout>


        </ScrollView>



    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>