<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.pedroas93.platzi.CompletarRegistroActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical"

            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createaccount"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createaccount"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cedula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Cedula"
                    />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createaccount"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createaccount"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/contraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createaccount"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirmarConstraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createaccount"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/numero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Teléfono/Celular"
                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createaccount"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/direccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Dirección"
                    />

            </android.support.design.widget.TextInputLayout>




            <Button
                android:id="@+id/ingresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ingresar"
                android:theme="@style/RaisedButtonDark"
                />

        </LinearLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
